add some html code

--- a/home.html
+++ b/home.html
@@ -1,3 +1,4 @@
+
 <html>
 <head>
   <title>Title of the document</title>
@@ -5,6 +6,7 @@
 
 <body>
   <p>First paragraph.</p>
+  <title>Title of the document</title>
 </body>
 
 </html>
