--- a/home.html
+++ b/home.html
@@ -1,16 +1,15 @@
-
 <html>
 <head>
   <title>Title of the document</title>
 </head>
 
 <body>
-<<<<<<< HEAD
+
   <p>First paragraph.</p>
-  <title>Title of the document</title>
-=======
   <p>This is a another paragraph.</p>
->>>>>>> added another p tag
+  <h1>This is a heading</h1>
+  <p>This is a paragraph.</p>
+
 </body>
 
 </html>
